--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,8 @@
 name: telegram_file_picker
-description: A new Flutter package project.
+description: This package is for picking files with telegram style
 version: 0.0.1
-homepage:
+homepage: https://github.com/rayhann/telegram_file_picker.git
+authors: Rayhan Asprilla<rayhanasprillasatria@gmail.com>
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -10,6 +11,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  camerawesome: ^0.3.0+1
+  path_provider: ^2.0.2
+  flutter_exif_rotation: ^0.4.1
+  photo_gallery: ^1.0.1
+  permission_handler: ^8.1.0
+  transparent_image: ^2.0.0
 
 dev_dependencies:
   flutter_test:
